FINERACT-2380: move retrofit client based test to feign